--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=8080
 
 spring.h2.console.enabled=true
 
-spring.datasource.url=jdbc:h2:mem:default
+spring.datasource.url=jdbc:h2:file:./pokemon-db
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=sa
+spring.datasource.username=admin
+spring.datasource.password=admin
 
 spring.jpa.hibernate.ddl-auto=update
